# podreader

./: .gitignore  README.md  ROADMAP.md  flake.nix  pyproject.toml
.obsidian/: workspace.json
docs/superpowers/plans/: 2026-05-10-podreader-scaffolding-and-tests.md
docs/superpowers/reviews/: podreader-design-review-prompt.md  podreader-design-review-v2.md  podreader-design-review-v3.md  podreader-design-review-v4.md  podreader-design-review.md
docs/superpowers/specs/: 2026-05-10-podreader-design.md
src/podreader/: cli.py  config.py  feeds.py  matching.py  state.py  transcripts.py
src/podreader/extractors/: __init__.py  democracynow.py  npr.py
tests/: test_config.py  test_extractors.py  test_feeds.py  test_matching.py  test_remove.py  test_state.py  test_transcripts.py
tests/fixtures/: sample_feed.xml
