[project]
name = "podreader"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "feedparser",
    "requests",
    "beautifulsoup4",
    "tomli-w",
    "whisper-timestamped",
]

[project.scripts]
podreader = "podreader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podreader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
